--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,13 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
     background-color: #333;
-    color: #fff
+    color: #eee;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.columns {
+    display: flex;
+}
+
+#pricing {
+    display: flex;
 }
