--- a/css/style.css
+++ b/css/style.css
@@ -10,4 +10,123 @@ body {
 
 #pricing {
     display: flex;
+    width: 1000px;
+    margin: 0 auto;
+    padding-bottom: 30px;
 }
+
+.price-col {
+    width: 300px;
+    border: white 3px solid;
+    border-radius: 3px;
+    margin: 20px;
+    text-align: center;
+}
+
+.price-header {
+    background-color: rgb(255, 0, 157);
+    padding: 10px;
+    text-align: center;
+    font-size: 24px;
+    text-transform: uppercase;
+}
+
+.pricing {
+    font-size: 36px;
+    text-align: center;
+}
+
+.prc-btn {
+    font-size: 24px;
+    font-weight: 800;
+    text-transform: uppercase;
+    background-color: white;
+    color: rgb(255, 0, 157);
+    margin: 30px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.prc-btn:hover, 
+.prc-btn:focus {
+    color: white;
+    background-color: rgb(255, 0, 157);
+}
+
+#features {
+    width: 800px;
+    margin: 0 auto;
+    padding-bottom: 30px;
+}
+
+#video-div {
+    width: 800px;
+    margin: 0 auto;
+    text-align: center;
+    padding-bottom: 30px;
+}
+
+h1{
+    font-size: 48px;
+    color: rgb(255, 0, 157);
+}
+#heading {
+    width: 800px;
+    margin: 0 auto;
+    text-align: center;
+    padding-bottom: 30px;
+    padding-top: 40px;
+}
+
+.col-left {
+    margin: 5px;
+    padding: 10px;
+    color: rgb(255, 0, 157);
+}
+
+ul {
+    list-style: none;
+    display: flex;
+}
+
+li {
+    padding: 1em;
+    text-transform: uppercase;
+    font-weight: 600;
+    text-decoration: none;
+    color: #eee;
+}
+
+
+a {
+    color: #eee;
+    text-decoration: none;
+}
+
+a:hover,
+a:focus {
+    color: rgb(255, 0, 157);
+}
+
+.push-right {
+    margin-left: auto;
+}
+
+#footer {
+    background-color: gray;
+    text-align: right;
+    padding: 1em;
+}
+
+#nav-bar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    overflow: hidden;
+}
+
+@media (max-width: 600px) {
+    #nav-bar {
+      flex-wrap: wrap;
+    }
+  }
